ADD_SUBDIRECTORY(third_party/dynamic_annotations)

SET(SRC_LIST ../build/build_config.h
          third_party/dmg_fp/dmg_fp.h
          third_party/dmg_fp/g_fmt.cc
          third_party/dmg_fp/dtoa_wrapper.cc
          third_party/icu/icu_utf.cc
          third_party/icu/icu_utf.h
          third_party/nspr/prtime.cc
          third_party/nspr/prtime.h
          third_party/nspr/prcpucfg_linux.h
          allocator/allocator_extension.cc
          allocator/allocator_extension.h
          allocator/type_profiler_control.cc
          allocator/type_profiler_control.h
          at_exit.cc
          at_exit.h
          atomic_ref_count.h
          atomic_sequence_num.h
          atomicops.h
          atomicops_internals_gcc.h
          atomicops_internals_x86_gcc.cc
          atomicops_internals_x86_gcc.h
          base_export.h
          base_paths.cc
          base_paths.h
          base_paths_posix.cc
          base_paths_posix.h
          base_switches.h
          base64.cc
          base64.h
          basictypes.h
          bind.h
          bind_helpers.cc
          bind_helpers.h
          bind_internal.h
          bits.h
          build_time.cc
          build_time.h
          callback.h
          callback_helpers.h
          callback_internal.cc
          callback_internal.h
          cancelable_callback.h
          command_line.cc
          command_line.h
          compiler_specific.h
          cpu.cc
          cpu.h
          critical_closure.h
          debug/alias.cc
          debug/alias.h
          debug/debugger.cc
          debug/debugger.h
          debug/debugger_posix.cc
          debug/leak_annotations.h
          debug/leak_tracker.h
          debug/profiler.cc
          debug/profiler.h
          debug/stack_trace.cc
          debug/stack_trace.h
          debug/stack_trace_posix.cc
          debug/trace_event.cc
          debug/trace_event.h
          debug/trace_event_impl.cc
          debug/trace_event_impl.h
          eintr_wrapper.h
          environment.cc
          environment.h
		  file_descriptor_shuffle.h
		  file_descriptor_shuffle.cc
          file_descriptor_posix.h
          file_path.cc
          file_path.h
          file_util.cc
          file_util.h
          file_util_linux.cc
          file_util_posix.cc
          file_util_proxy.cc
          file_util_proxy.h
          file_version_info.h
          files/dir_reader_fallback.h
          files/dir_reader_linux.h
          files/dir_reader_posix.h
          files/file_path_watcher.cc
          files/file_path_watcher.h
          files/file_path_watcher_linux.cc
          files/file_path_watcher_stub.cc
          float_util.h
          format_macros.h
          global_descriptors_posix.cc
          global_descriptors_posix.h
          gtest_prod_util.h
          guid.cc
          guid.h
          guid_posix.cc
          hash.cc
          hash.h
          hash_tables.h
          hi_res_timer_manager_posix.cc
          hi_res_timer_manager.h
          id_map.h
          json/json_file_value_serializer.cc
          json/json_file_value_serializer.h
          json/json_parser.cc
          json/json_parser.h
          json/json_reader.cc
          json/json_reader.h
          json/json_string_value_serializer.cc
          json/json_string_value_serializer.h
          json/json_value_converter.h
          json/json_writer.cc
          json/json_writer.h
          json/string_escape.cc
          json/string_escape.h
          lazy_instance.cc
          lazy_instance.h
          linked_list.h
          location.cc
          location.h
          logging.cc
          logging.h
		  md5.h
		  md5.cc
          memory/aligned_memory.cc
          memory/aligned_memory.h
          memory/linked_ptr.h
          memory/mru_cache.h
          memory/raw_scoped_refptr_mismatch_checker.h
          memory/ref_counted.cc
          memory/ref_counted.h
          memory/ref_counted_memory.cc
          memory/ref_counted_memory.h
          memory/scoped_handle.h
          memory/scoped_nsobject.h
          memory/scoped_open_process.h
          memory/scoped_policy.h
          memory/scoped_ptr.h
          memory/scoped_vector.h
          memory/singleton.cc
          memory/singleton.h
          memory/weak_ptr.cc
          memory/weak_ptr.h
          message_loop.cc
          message_loop.h
          message_loop_proxy.cc
          message_loop_proxy.h
          message_loop_proxy_impl.cc
          message_loop_proxy_impl.h
          message_pump.cc
          message_pump.h
          message_pump_default.cc
          message_pump_libevent2.cc
          message_pump_default.h
          metrics/sample_vector.cc
          metrics/sample_vector.h
          metrics/bucket_ranges.cc
          metrics/bucket_ranges.h
          metrics/histogram.cc
          metrics/histogram.h
          metrics/histogram_base.cc
          metrics/histogram_base.h
          metrics/histogram_flattener.h
          metrics/histogram_samples.cc
          metrics/histogram_samples.h
          metrics/histogram_snapshot_manager.cc
          metrics/histogram_snapshot_manager.h
          metrics/sparse_histogram.cc
          metrics/sparse_histogram.h
          metrics/statistics_recorder.cc
          metrics/statistics_recorder.h
          metrics/stats_counters.cc
          metrics/stats_counters.h
          metrics/stats_table.cc
          metrics/stats_table.h
          move.h
          native_library.h
          native_library_posix.cc
          observer_list.h
          observer_list_threadsafe.h
          path_service.cc
          path_service.h
          pending_task.cc
          pending_task.h
          pickle.cc
          pickle.h
          platform_file.cc
          platform_file.h
          platform_file_posix.cc
          port.h
          posix/unix_domain_socket.cc
          posix/unix_domain_socket.h
          process.h
          process_info.h
          process_linux.cc
          process_posix.cc
          process_util.cc
          process_util.h
          process_util_linux.cc
          process_util_posix.cc
          profiler/scoped_profile.cc
          profiler/scoped_profile.h
          profiler/alternate_timer.cc
          profiler/alternate_timer.h
          profiler/tracked_time.cc
          profiler/tracked_time.h
          rand_util.cc
          rand_util.h
          rand_util_posix.cc
          run_loop.cc
          run_loop.h
          safe_strerror_posix.cc
          safe_strerror_posix.h
          scoped_native_library.cc
          scoped_native_library.h
          scoped_temp_dir.cc
          scoped_temp_dir.h
          sequenced_task_runner.cc
          sequenced_task_runner.h
          sequenced_task_runner_helpers.h
          sha1.h
          sha1_portable.cc
          shared_memory.h
          shared_memory_posix.cc
          single_thread_task_runner.h
          stack_container.h
          stl_util.h
          string_number_conversions.cc
          string_number_conversions.h
          string_piece.cc
          string_piece.h
          string_split.cc
          string_split.h
          string_tokenizer.h
          string_util.cc
          string_util.h
          string_util_posix.h
          string16.cc
          string16.h
          stringize_macros.h
          stringprintf.cc
          stringprintf.h
          supports_user_data.cc
          supports_user_data.h
		  base_switches.cc
          synchronization/cancellation_flag.cc
          synchronization/cancellation_flag.h
          synchronization/condition_variable.h
          synchronization/condition_variable_posix.cc
          synchronization/lock.cc
          synchronization/lock.h
          synchronization/lock_impl.h
          synchronization/lock_impl_posix.cc
          synchronization/spin_wait.h
          synchronization/waitable_event.h
          synchronization/waitable_event_posix.cc
          synchronization/waitable_event_watcher.h
          synchronization/waitable_event_watcher_posix.cc
          system_monitor/system_monitor.cc
          system_monitor/system_monitor.h
          system_monitor/system_monitor_posix.cc
          sys_byteorder.h
          sys_info.h
          sys_info_linux.cc
          sys_info_posix.cc
          sys_string_conversions.h
          sys_string_conversions_posix.cc
          task_runner.cc
          task_runner.h
          task_runner_util.h
          template_util.h
          thread_task_runner_handle.cc
          thread_task_runner_handle.h
          threading/non_thread_safe.h
          threading/non_thread_safe_impl.cc
          threading/non_thread_safe_impl.h
          threading/platform_thread.h
          threading/platform_thread_posix.cc
          threading/post_task_and_reply_impl.cc
          threading/post_task_and_reply_impl.h
          threading/sequenced_worker_pool.cc
          threading/sequenced_worker_pool.h
          threading/simple_thread.cc
          threading/simple_thread.h
          threading/thread.cc
          threading/thread.h
          threading/thread_checker.h
          threading/thread_checker_impl.cc
          threading/thread_checker_impl.h
          threading/thread_collision_warner.cc
          threading/thread_collision_warner.h
          threading/thread_local.h
          threading/thread_local_posix.cc
          threading/thread_local_storage.h
		  threading/thread_local_storage_posix.cc
		  threading/platform_thread_posix.cc
          threading/thread_restrictions.h
          threading/thread_restrictions.cc
          threading/watchdog.cc
          threading/watchdog.h
          threading/worker_pool.h
          threading/worker_pool.cc
          threading/worker_pool_posix.cc
          threading/worker_pool_posix.h
          time.cc
          time.h
          time_posix.cc
          timer.cc
          timer.h
          tracked_objects.cc
          tracked_objects.h
          tracking_info.cc
          tracking_info.h
          tuple.h
          utf_offset_string_conversions.cc
          utf_offset_string_conversions.h
          utf_string_conversion_utils.cc
          utf_string_conversion_utils.h
          utf_string_conversions.cc
          utf_string_conversions.h
          values.cc
          values.h
          value_conversions.cc
          value_conversions.h
          version.cc
          version.h
          vlog.cc
          vlog.h)

SET(LIBRARY_OUTPUT_PATH ${TF_CURRENT_BINARY_PATH_LIB})

ADD_LIBRARY(base STATIC ${SRC_LIST})
	  