CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (lua)

IF(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D_LIB)
  ADD_DEFINITIONS(-D__LINUX__)
ELSE(CMAKE_SYSTEM MATCHES Linux)
  ADD_DEFINITIONS(-D__WINDOWS__)
  ADD_DEFINITIONS(-D_USRDLL)
  ADD_DEFINITIONS(-DLUALIBDLL_EXPORTS)
ENDIF(CMAKE_SYSTEM MATCHES Linux)

INCLUDE_DIRECTORIES(src)
ADD_SUBDIRECTORY(src)
